pscheduler-tool-curl (4.4.4-1) perfsonar-4.4; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Mon, 04 Apr 2022 13:04:06 -0400

pscheduler-tool-curl (4.4.3-1) perfsonar-4.4; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Thu, 03 Feb 2022 15:54:24 -0500

pscheduler-tool-curl (4.4.2-1) perfsonar-4.4; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 12 Jan 2022 09:57:04 -0500

pscheduler-tool-curl (4.4.1-1) perfsonar-4.4; urgency=low

  * New upstream version.

 -- Antoine Delvaux <antoine.delvaux@man.poznan.pl>  Thu, 26 Aug 2021 03:17:22 +0100

pscheduler-tool-curl (4.4.0-1) perfsonar-4.4; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 07 Jul 2021 15:32:38 +0000

pscheduler-tool-curl (4.3.3-1) perfsonar-4.3; urgency=low

  * New upstream version.
  * Changing dependency from curl to python3-pycurl

 -- perfSONAR developers <debian@perfsonar.net>  Tue, 02 Feb 2021 16:35:32 +0000

pscheduler-tool-curl (4.3.2-1) perfsonar-4.3; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 18 Nov 2020 15:41:13 +0000

pscheduler-tool-curl (4.3.0-1) perfsonar-4.3; urgency=low

  * New upstream version.
  * Building for Python 3 and Python 3 only.

 -- perfSONAR developers <debian@perfsonar.net>  Fri, 30 Oct 2020 13:49:58 +0000

pscheduler-tool-curl (4.2.4-1) perfsonar-4.2; urgency=low

  * New upstream version.

 -- perfSONAR developers <debian@perfsonar.net>  Wed, 25 Mar 2020 15:36:56 -0400

pscheduler-tool-curl (4.2.3-1) perfsonar-4.2; urgency=low

  * New upstream version.

 -- Antoine Delvaux <antoine.delvaux@man.poznan.pl>  Mon, 24 Feb 2020 14:32:17 +0000

pscheduler-tool-curl (4.2.1-1) perfsonar-4.2; urgency=low

  * New upstream version.

 -- Antoine Delvaux <antoine.delvaux@man.poznan.pl>  Wed, 02 Oct 2019 23:07:24 +0000
