@@ -1,0 +1,7 @@
+#
+# Makefile for Any Tool
+#
+
+AUTO_TARBALL=1
+
+include make/generic-rpm.make
