@@ -24,16 +24,14 @@ except KeyError:
         "reasons": [ "Missing test type" ]
     })
 
-if test_type != "http":
+if test_type != "disk-to-disk":
     pscheduler.succeed_json({
         "can-run": False,
         "reasons": [ "Unsupported test type" ]
     })
 
 
-
-MAX_SCHEMA = 3
-
+MAX_SCHEMA = 1
 
 try:
     pscheduler.json_check_schema(json["spec"], MAX_SCHEMA)
@@ -48,13 +46,6 @@ except KeyError:
     pscheduler.succeed_json({
         "can-run": False,
         "reasons": ["Missing data in test specification"]
-    })
-
-if json["spec"]["url"][0:5] == "file:" \
-   and json["spec"].get("keep-content", False):
-    pscheduler.succeed_json({
-        "can-run": False,
-        "reasons": ["Cannot return content for file:// URLs"]
     })
 
 pscheduler.succeed_json({ "can-run": True })
