@@ -13,10 +13,10 @@
 {
     "schema": 1,
 
-    "name": "curl",
-    "description": "cURL-based tool for HTTP tests",
+    "name": "curl-d2d",
+    "description": "cURL-based tool for disk-to-disk tests",
     "version": "1.0",
-    "tests": [ "http" ],
+    "tests": [ "disk-to-disk" ],
 
     "preference": 0,
 
