@@ -1,0 +1,14 @@
+#!/usr/bin/env python3
+#
+# Merge the participant results of a run by this tool into a
+# test-standard result.
+#
+
+import pscheduler
+
+input = pscheduler.json_load(exit_on_error=True);
+
+try:
+    pscheduler.succeed_json(input['results'][0]['result'])
+except KeyError:
+    pscheduler.succeed_json(None)
