@@ -1,0 +1,17 @@
+Source: pscheduler-tool-curl-d2d
+Section: net
+Priority: optional
+Maintainer: perfSONAR developers <perfsonar-developer@internet2.edu>
+Uploaders: Mark Feit <mfeit@internet2.edu>
+Build-Depends: debhelper (>= 9), python3
+Standards-Version: 3.9.8
+Homepage: https://github.com/perfsonar/pscheduler
+Vcs-Git: git://github.com/perfsonar/pscheduler
+Vcs-Browser: https://github.com/perfsonar/pscheduler
+
+Package: pscheduler-tool-curl-d2d
+Architecture: all
+Depends: ${misc:Depends}, python3, python3-pscheduler,
+ pscheduler-server (>= 4.3.0), pscheduler-test-disk-to-disk, python3-pycurl
+Description: pScheduler curl tool for disk-to-disk
+ cURL disk-to-disk tool class for pScheduler
