@@ -1,0 +1,12 @@
+[DEFAULT]
+# default build command and distro used to build package
+builder = DIST=stretch /usr/bin/git-pbuilder
+# tell git-buildpackage how to clean the source tree
+cleaner = fakeroot debian/rules clean
+# default branch for upstream sources and debian packaging (should usually be equal for pS)
+upstream-branch = 4.4.4
+debian-branch = 4.4.4
+# the default tag formats used:
+upstream-tag = v%(version)s
+debian-tag = debian/%(version)s
+
