@@ -1,0 +1,5 @@
+#!/bin/sh
+
+set -e
+
+pscheduler task --tool curl disk-to-disk --source ftp://speedtest.tele2.net/1KB.zip --dest /tmp/test.out
