@@ -1,0 +1,1 @@
+activate-noawait pscheduler-warmboot
