@@ -8,13 +8,7 @@
 # back to the test. Both system and api are able to be used here.
 #
 
-import os
-import sys
-import time
-import json
-import datetime
 import pscheduler
-import subprocess
 
 from run_http import run
 
@@ -23,164 +17,12 @@ from run_http import run
 input = pscheduler.json_load(exit_on_error=True)
 log = pscheduler.Log(prefix='tool-curl', quiet=True)
 
-
-# Take input from test spec
 try:
-    test_type = input['test']['type']
-except KeyError as ex:
-    pscheduler.fail('Missing data in input')
-
-
-# HTTP is implemented in a module
-
-if test_type == "http":
-    try:
-
-        pscheduler.succeed_json(run(input))
-    except Exception as ex:
-        pscheduler.succeed_json({
-            "succeeded": False,
-            "error": str(ex)
-        })
-    assert False, "This should not be reached."
-
-
-# Disk-to-disk is not.
-# TODO: Remedy this.
-
-assert test_type == "disk-to-disk", "Internal problem."
-
-try:
-    schema = input['test']['spec']['schema']
-    dest = input['test']['spec']['dest']
-    source = input['test']['spec']['source']
-    cleanup = input['test']['spec'].get('cleanup', True)
-except KeyError as ex:
-    pscheduler.fail('Missing data in input')
-
-
-
-
-timeout_iso = input['test']['spec'].get('timeout', 'PT10S')
-
-timeout = pscheduler.timedelta_as_seconds( \
-               pscheduler.iso8601_as_timedelta(timeout_iso))
-
-
-succeeded = False
-error = ''
-diags = []
-
-STDERR = ""
-
-# Run the actual task here:
-if True:
-  # Normalize input with Globus tool
-  if (len(source) > 6 and source[:7] != "file://"):
-    # If source is local file, use file:// protocol
-    if (source[0] == "/" and source[1] != "/"):
-      source = "file://" + source
-
-  if dest and (len(dest) > 6 and  dest[:7] == "file://"):
-    dest = dest.split("file://")[-1]
-
-  # Execute curl command
-  argv = ['curl']
-  if dest:
-      argv.append('-o') # Flag to output file
-      argv.append(dest) # Download location
-  argv.append(source) # Source URL
-  
-  try:
-      start_at = input['schedule']['start']
-      log.debug("Sleeping until %s", start_at)
-      pscheduler.sleep_until(start_at)
-      log.debug("Starting")
-  except KeyError:
-      pscheduler.fail("Unable to find start time in input")
-
-  start_time = datetime.datetime.now()
-  status, stdout, stderr = pscheduler.run_program(argv, timeout=timeout)
-  end_time = datetime.datetime.now()
-
-  lines = stderr.split('\n')
-  parsed = [stat for stat in lines[-1].split(' ') if stat != '']
-  
-  STDERR = parsed
-
-  if status:
-    succeeded = False
-    error = "Error running program:\n%s"% stderr.strip('\n')
-
-    # Determine how much (if any) of the file was transferred
-    if dest and os.path.isfile(dest):
-      bytes_sent = os.stat(dest).st_size
-
-      # Convert bytes to human readable format 
-      # TODO: The pscheduler module has functions for doing this.
-      scalar = ['B', 'KB', 'MB', 'GB', 'TB']
-      while bytes_sent > 1024 and len(scalar) > 1:
-        bytes_sent = int(bytes_sent / 1024)
-        scalar = scalar[1:]
-
-      # Put this into diags
-      #error += '\n\nBytes Transfered: %s %s'% (int(bytes_sent), scalar[0])
-      #error += '\n\nActual Timeout: %s seconds' % timeout
-      
-      # Getting source filesize
-      #argv = ['curl', '-s', source, '| wc -c']
-      #outs = pscheduler.run_program(argv, timeout=timeout)
-      #error += '\n\n' + str(outs)
-
-  else:
-    succeeded = True
-    diags.append(stdout)
-    diags.append(stderr)
-
-
-if cleanup:
-    if os.path.isfile(dest):
-        try:
-            os.remove(dest)
-        except Exception as ex:
-            diags.append("Exception while removing file: %s" % (str(ex)))
-
-
-# Organize results into json data
-
-
-results = {
-    "succeeded": succeeded
-}
-
-
-results['time'] = pscheduler.timedelta_as_iso8601(end_time - start_time)
-
-
-STDERR = stderr.split("\n")[-2].split()
-
-#STDERR[6] is Average Download Speed
-#Try to get download speed, if can't parse then skip
-try:
-    # This is in bytes/sec; convert to bits/sec.
-    results['throughput'] = pscheduler.si_as_number(STDERR[6]) * 8
+    pscheduler.succeed_json(run(input))
 except Exception as ex:
-    # TODO: This should probably fail since throughput is what the
-    # measurement is all about.
-    diags.append("Throughput speed exception: %s" % (str(ex)))
+    pscheduler.succeed_json({
+        "succeeded": False,
+        "error": str(ex)
+    })
 
-
-# TODO: Refactor this in the same style as the above try/except.
-try:
-    results['bytes-sent'] = pscheduler.si_as_number(STDERR[1])
-except Exception as ex:
-    diags.append("Failed to get bytes sent: %s" % (str(ex)))
-    pass
-
-
-
-pscheduler.succeed_json({
-    'succeeded': succeeded,
-    'result': results,
-    'diags': "\n".join(diags)
-})
+assert False, "This should not be reached."
