@@ -12,6 +12,6 @@ Vcs-Browser: https://github.com/perfsonar/pscheduler
 Package: pscheduler-tool-curl
 Architecture: all
 Depends: ${misc:Depends}, python3, python3-pscheduler,
- pscheduler-server (>= 4.3.0), pscheduler-test-disk-to-disk, python3-pycurl
+ pscheduler-server (>= 4.3.0), pscheduler-test-http, python3-pycurl
 Description: pScheduler curl tool
  curl tool class for pScheduler
