@@ -1,3 +1,9 @@
+pscheduler-tool-curl (4.4.5-1) perfsonar-4.4; urgency=low
+
+  * New upstream version.
+
+ -- perfSONAR developers <debian@perfsonar.net>  Mon, 19 Sep 2022 14:25:00 -0400
+
 pscheduler-tool-curl (4.4.4-1) perfsonar-4.4; urgency=low
 
   * New upstream version.
